[package]
name = "performant-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
performant-common = { path = "../performant-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "performant"
path = "src/main.rs"
